Update 锁优化